--- a/index.html
+++ b/index.html
@@ -1124,8 +1124,8 @@
         <div class="flex-row hidden lg:flex gap-4 w-full"data-aos-duration="1000" data-aos="fade-right">
           <div class="w-full">
             <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-amber-100/20" style="border: 3px solid rgb(126, 118, 118);height: 400px; ">
-              <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" src="./public/images/kelas-rpl/jurusan-1.webp" alt="gambar jurusan rpl">
-              <a href="./public/images/kelas-rpl/jurusan-1.webp" loading="lazy" decoding="async" data-fancybox="kelas-galeri" target="_blank">
+              <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" data-fancybox="kelas-galeri" src="./public/images/kelas-rpl/jurusan-1.webp" alt="gambar jurusan rpl">
+              <a href="./public/images/kelas-rpl/jurusan-1.webp" loading="lazy" decoding="async" data-fancybox="kelas-galeri" >
                 <div class="relative">
                   <div class="flex items-center justify-between mb-20">
                     <span class="transition duration-100 transform group-hover:text-white group-hover:translate-x-1 group-hover:-translate-y-1"></span>
@@ -1144,8 +1144,8 @@
         <div class="flex-row hidden lg:flex gap-4 w-full" data-aos-duration="1000" data-aos="fade-in">
           <div class="w-full">
             <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-amber-100/20" style="border: 3px solid rgb(126, 118, 118); height: 400px;">
-              <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" src="./public/images/kelas-rpl/jurusan-1.webp" alt="gambar jurusan pplg">
-              <a href="./public/images/kelas-rpl/jurusan-1.webp" loading="lazy" decoding="async" data-fancybox="kelas-galeri" target="_blank">
+              <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" data-fancybox="kelas-galeri" src="./public/images/kelas-rpl/jurusan-1.webp" alt="gambar jurusan pplg">
+              <a href="./public/images/kelas-rpl/jurusan-1.webp" loading="lazy" decoding="async" data-fancybox="kelas-galeri" >
                 <div class="relative">
                   <div class="flex items-center justify-between mb-20">
                     <span class="transition duration-100 transform group-hover:text-white group-hover:translate-x-1 group-hover:-translate-y-1"></span>
@@ -1164,8 +1164,8 @@
     <div class="flex-row flex lg:hidden gap-4 w-full" >
       <div class="w-full"data-aos-duration="1000" data-aos="fade-right">
         <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-amber-100/20" style="border: 3px solid rgb(126, 118, 118);">
-          <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" src="./public/images/kelas-rpl/jurusan-1.webp" alt="gambar jurusan pplg">
-          <a href="./public/images/kelas-rpl/jurusan-1.webp" loading="lazy" decoding="async" data-fancybox="kelas-galeri" target="_blank">
+          <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" data-fancybox="kelas-galeri" src="./public/images/kelas-rpl/jurusan-1.webp" alt="gambar jurusan pplg">
+          <a href="./public/images/kelas-rpl/jurusan-1.webp" loading="lazy" decoding="async" data-fancybox="kelas-galeri" >
             <div class="relative">
               <div class="flex items-center justify-between mb-20">
                 <span class="transition duration-100 transform group-hover:text-white group-hover:translate-x-1 group-hover:-translate-y-1"></span>
@@ -1180,8 +1180,8 @@
       </div>
       <div class="w-full"data-aos-duration="1000" data-aos="fade-left">
         <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-amber-100/20" style="border: 3px solid rgb(126, 118, 118); ">
-          <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" src="./public/images/kelas-rpl/jurusan-1.webp" alt="gambar jurusan pplg">
-          <a href="./public/images/kelas-rpl/jurusan-1.webp" loading="lazy" decoding="async" data-fancybox="kelas-galeri" target="_blank">
+          <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" data-fancybox="kelas-galeri" src="./public/images/kelas-rpl/jurusan-1.webp" alt="gambar jurusan pplg">
+          <a href="./public/images/kelas-rpl/jurusan-1.webp" loading="lazy" decoding="async" data-fancybox="kelas-galeri" >
             <div class="relative">
               <div class="flex items-center justify-between mb-20">
                 <span class="transition duration-100 transform group-hover:text-white group-hover:translate-x-1 group-hover:-translate-y-1"></span>
@@ -1198,8 +1198,8 @@
     <div class="w-full">
       <div class="w-full"data-aos-duration="1000" data-aos="fade-left">
         <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas h-44 md:h-72  rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-amber-100/20" style="border: 3px solid rgb(126, 118, 118); height: 400px;">
-          <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" src="./public/images/kelas-rpl/jurusan-1.webp" alt="gambar jurusan pplg">
-          <a href="./public/images/kelas-rpl/jurusan-1.webp" loading="lazy" decoding="async" data-fancybox="kelas-galeri" target="_blank">
+          <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" data-fancybox="kelas-galeri" src="./public/images/kelas-rpl/jurusan-1.webp" alt="gambar jurusan pplg">
+          <a href="./public/images/kelas-rpl/jurusan-1.webp" loading="lazy" decoding="async" data-fancybox="kelas-galeri" >
             <div class="relative">
               <div class="flex items-center justify-between mb-20">
                 <span class="transition duration-100 transform group-hover:text-white group-hover:translate-x-1 group-hover:-translate-y-1"></span>
@@ -1350,6 +1350,8 @@
 
   <script src="./public/js/bundle.min.js"></script>
   <script src="./public/js/swiperebudnel.js"></script>
+  
+  <script src="./public/js/fancybox.js"></script>
 </body>
 </html>
 
