--- a/kelas.html
+++ b/kelas.html
@@ -475,6 +475,8 @@ margin: 0;
 
 <script src="./public/js/bundle.min.js"></script>
 <script src="./public/js/swiperebudnel.js"></script>
+  <script src="./public/js/fancybox.js"></script>
+  
 </body>
 </html>
 
