--- a/kelas12.html
+++ b/kelas12.html
@@ -376,6 +376,7 @@
     </footer>
   </div>
 
+  <script src="./public/js/fancybox.js"></script>
   <script src="./public/js/bundle.min.js"></script>
   <script src="./public/js/swiperebudnel.js"></script>
 </body>
