--- a/kelas10.html
+++ b/kelas10.html
@@ -338,6 +338,7 @@
   </div>
 
 
+  <script src="./public/js/fancybox.js"></script>
     <script src="./public/js/bundle.min.js"></script>
     <script src="./public/js/swiperebudnel.js"></script>
 </body>
