--- a/kelas.html
+++ b/kelas.html
@@ -291,7 +291,7 @@ margin: 0;
             style="border: 3px solid rgb(126, 118, 118);">
             <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-44 md:h-72  " 
               src="./public/images/kelas-rpl/kelas-rpl-10-ppl-3.webp" alt="gambar kelas rpl ">
-            <a href="./kelas10.html" loading="lazy" decoding="async" data-fancybox="gallery" >
+            <a href="./kelas10.html" loading="lazy" decoding="async" >
               <div class="relative">
                 <div class="flex items-center justify-between mb-20">
                   <span class="transition duration-100 transform group-hover:text-white group-hover:translate-x-1 group-hover:-translate-y-1"></span>
@@ -315,7 +315,7 @@ margin: 0;
           style="border: 3px solid rgb(126, 118, 118);">
           <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-44 md:h-72  " 
             src="./public/images/kelas-rpl/kelas-rpl-11-ppl-2.webp" alt="gambar kelas rpl ">
-          <a href="./kelas11.html" loading="lazy" decoding="async" data-fancybox="gallery" >
+          <a href="./kelas11.html" loading="lazy" decoding="async" >
             <div class="relative">
               <div class="flex items-center justify-between mb-20">
                 <span class="transition duration-100 transform group-hover:text-white group-hover:translate-x-1 group-hover:-translate-y-1"></span>
@@ -339,7 +339,7 @@ margin: 0;
         style="border: 3px solid rgb(126, 118, 118);">
         <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-44 md:h-72  " 
           src="./public/images/kelas-rpl/kelas-rpl-11-ppl-2.webp" alt="gambar kelas rpl ">
-        <a href="./kelas11.html" loading="lazy" decoding="async" data-fancybox="gallery" >
+        <a href="./kelas11.html" loading="lazy" decoding="async" >
           <div class="relative">
             <div class="flex items-center justify-between mb-20">
               <span class="transition duration-100 transform group-hover:text-white group-hover:translate-x-1 group-hover:-translate-y-1"></span>
@@ -358,7 +358,7 @@ margin: 0;
         style="border: 3px solid rgb(126, 118, 118);">
         <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-44 md:h-72  " 
           src="./public/images/kelas-rpl/kelas-rpl-11-ppl-2.webp" alt="gambar kelas rpl ">
-        <a href="./kelas11.html" loading="lazy" decoding="async" data-fancybox="gallery" >
+        <a href="./kelas11.html" loading="lazy" decoding="async" >
           <div class="relative">
             <div class="flex items-center justify-between mb-20">
               <span class="transition duration-100 transform group-hover:text-white group-hover:translate-x-1 group-hover:-translate-y-1"></span>
@@ -380,7 +380,7 @@ margin: 0;
             style="border: 3px solid rgb(126, 118, 118);">
             <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-44 md:h-72  " 
               src="./public/images/kelas-rpl/kelas-rpl-12-3.webp" alt="gambar kelas rpl ">
-            <a href="./kelas12.html" loading="lazy" decoding="async" data-fancybox="gallery" >
+            <a href="./kelas12.html" loading="lazy" decoding="async" >
               <div class="relative">
                 <div class="flex items-center justify-between mb-20">
                   <span class="transition duration-100 transform group-hover:text-white group-hover:translate-x-1 group-hover:-translate-y-1"></span>
