--- a/galeri.html
+++ b/galeri.html
@@ -266,8 +266,7 @@ margin: 0;
     </div>
   </nav>
 
-
-  <section class="relative p-4 pb-20 2xl:py-40" x-data="{ showContent: false }">
+<section class="relative p-4 pb-20 2xl:py-40" x-data="{ showContent: false }">
   
   <div class="absolute inset-0" style="background-color: rgba(0, 0, 0, 0.466);"></div>
   <div class="container px-4 mx-auto"></div>
@@ -624,11 +623,8 @@ margin: 0;
 </section>
   </section>
 
-  
 
-
-
-  <section class="relative p-4 pb-20 2xl:py-40 min-h-screen" x-data="{ showContent: false }">
+  <section class="relative p-4 pb-20 2xl:py-40 " >
   
     <div class="absolute inset-0" style="background-color: rgba(0, 0, 0, 0.466);"></div>
     <div class="container px-4 mx-auto">
@@ -698,141 +694,7 @@ margin: 0;
             </a>
           </div>
         </div>
-        <div class="w-1/2 px-2 mb-4 sm:px-4 sm:mb-8 md:w-1/2 lg:w-1/4 lg:mb-0">
-          <div class="relative flex items-end !text-white h-64 sm:h-128 p-4 sm:p-6 mb-8 rounded-3xl overflow-hidden group duration-300 hover:shadow-2xl hover:scale-105 hover:shadow-pink-800/50" style="border: 3px solid rgb(126, 118, 118);">
-            <img  class="absolute top-0 left-0 object-cover w-full h-full"
-              src="./public/images/galeri/galeri_csf_4.webp" alt="csf">
-            <a href="./public/images/galeri/galeri_csf_4.webp" data-fancybox="galeri" data-caption="csf4">
-              <div class="relative">
-                <div class="relative z-50 max-w-lg duration-300 translate-y-5 opacity-0 group-hover:opacity-100 group-hover:translate-y-0">
-                  <h4 class="mb-3 text-xs font-medium text-white md:text-sm lg:text-lg">CSF 4</h4>
-                </div>
-              </div>
-              <div class="absolute bottom-0 left-0 z-10 w-full duration-300 opacity-0 bg-gradient-to-t from-black to-transparent group-hover:opacity-100"
-                style="height: 300px;"></div>
-            </a>
-          </div>
-        </div>
-        <div class="w-1/2 px-2 mb-4 sm:px-4 sm:mb-8 md:w-1/2 lg:w-1/4 lg:mb-0">
-          <div class="relative flex items-end !text-white h-64 sm:h-128 p-4 sm:p-6 mb-8 rounded-3xl overflow-hidden group duration-300 hover:shadow-2xl hover:scale-105 hover:shadow-pink-800/50" style="border: 3px solid rgb(126, 118, 118);">
-            <img  class="absolute top-0 left-0 object-cover w-full h-full"
-              src="./public/images/galeri/galeri_csf_5.webp" alt="csf">
-            <a href="./public/images/galeri/galeri_csf_5.webp" data-fancybox="galeri" data-caption="csf5">
-              <div class="relative">
-                <div class="relative z-50 max-w-lg duration-300 translate-y-5 opacity-0 group-hover:opacity-100 group-hover:translate-y-0">
-                  <h4 class="mb-3 text-xs font-medium text-white md:text-sm lg:text-lg">CSF 5</h4>
-                </div>
-              </div>
-              <div class="absolute bottom-0 left-0 z-10 w-full duration-300 opacity-0 bg-gradient-to-t from-black to-transparent group-hover:opacity-100"
-                style="height: 300px;"></div>
-            </a>
-          </div>
-        </div>
-        <div class="w-1/2 px-2 mb-4 sm:px-4 sm:mb-8 md:w-1/2 lg:w-1/4 lg:mb-0">
-          <div class="relative flex items-end !text-white h-64 sm:h-128 p-4 sm:p-6 mb-8 rounded-3xl overflow-hidden group duration-300 hover:shadow-2xl hover:scale-105 hover:shadow-pink-800/50" style="border: 3px solid rgb(126, 118, 118);">
-            <img  class="absolute top-0 left-0 object-cover w-full h-full"
-              src="./public/images/galeri/galeri_csf_6.webp" alt="csf">
-            <a href="./public/images/galeri/galeri_csf_6.webp" data-fancybox="galeri" data-caption="csf6">
-              <div class="relative">
-                <div class="relative z-50 max-w-lg duration-300 translate-y-5 opacity-0 group-hover:opacity-100 group-hover:translate-y-0">
-                  <h4 class="mb-3 text-xs font-medium text-white md:text-sm lg:text-lg">CSF 6</h4>
-                </div>
-              </div>
-              <div class="absolute bottom-0 left-0 z-10 w-full duration-300 opacity-0 bg-gradient-to-t from-black to-transparent group-hover:opacity-100"
-                style="height: 300px;"></div>
-            </a>
-          </div>
-        </div>
-        <div class="w-1/2 px-2 mb-4 sm:px-4 sm:mb-8 md:w-1/2 lg:w-1/4 lg:mb-0">
-          <div class="relative flex items-end !text-white h-64 sm:h-128 p-4 sm:p-6 mb-8 rounded-3xl overflow-hidden group duration-300 hover:shadow-2xl hover:scale-105 hover:shadow-pink-800/50" style="border: 3px solid rgb(126, 118, 118);">
-            <img  class="absolute top-0 left-0 object-cover w-full h-full"
-              src="./public/images/galeri/galeri_csf_7.webp" alt="csf">
-            <a href="./public/images/galeri/galeri_csf_7.webp" data-fancybox="galeri" data-caption="csf7">
-              <div class="relative">
-                <div class="relative z-50 max-w-lg duration-300 translate-y-5 opacity-0 group-hover:opacity-100 group-hover:translate-y-0">
-                  <h4 class="mb-3 text-xs font-medium text-white md:text-sm lg:text-lg">CSF 7</h4>
-                </div>
-              </div>
-              <div class="absolute bottom-0 left-0 z-10 w-full duration-300 opacity-0 bg-gradient-to-t from-black to-transparent group-hover:opacity-100"
-                style="height: 300px;"></div>
-            </a>
-          </div>
-        </div>
-        <div class="w-1/2 px-2 mb-4 sm:px-4 sm:mb-8 md:w-1/2 lg:w-1/4 lg:mb-0">
-          <div class="relative flex items-end !text-white h-64 sm:h-128 p-4 sm:p-6 mb-8 rounded-3xl overflow-hidden group duration-300 hover:shadow-2xl hover:scale-105 hover:shadow-pink-800/50" style="border: 3px solid rgb(126, 118, 118);">
-            <img  class="absolute top-0 left-0 object-cover w-full h-full"
-              src="./public/images/galeri/galeri_csf_8.webp" alt="csf">
-            <a href="./public/images/galeri/galeri_csf_8.webp" data-fancybox="galeri" data-caption="csf8">
-              <div class="relative">
-                <div class="relative z-50 max-w-lg duration-300 translate-y-5 opacity-0 group-hover:opacity-100 group-hover:translate-y-0">
-                  <h4 class="mb-3 text-xs font-medium text-white md:text-sm lg:text-lg">CSF 8</h4>
-                </div>
-              </div>
-              <div class="absolute bottom-0 left-0 z-10 w-full duration-300 opacity-0 bg-gradient-to-t from-black to-transparent group-hover:opacity-100"
-                style="height: 300px;"></div>
-            </a>
-          </div>
-        </div>
-        <div class="w-1/2 px-2 mb-4 sm:px-4 sm:mb-8 md:w-1/2 lg:w-1/4 lg:mb-0">
-          <div class="relative flex items-end !text-white h-64 sm:h-128 p-4 sm:p-6 mb-8 rounded-3xl overflow-hidden group duration-300 hover:shadow-2xl hover:scale-105 hover:shadow-pink-800/50" style="border: 3px solid rgb(126, 118, 118);">
-            <img  class="absolute top-0 left-0 object-cover w-full h-full"
-              src="./public/images/galeri/galeri_event_1.webp" alt="csf">
-            <a href="./public/images/galeri/galeri_event_1.webp" data-fancybox="galeri" data-caption="event 1">
-              <div class="relative">
-                <div class="relative z-50 max-w-lg duration-300 translate-y-5 opacity-0 group-hover:opacity-100 group-hover:translate-y-0">
-                  <h4 class="mb-3 text-xs font-medium text-white md:text-sm lg:text-lg">Event 1</h4>
-                </div>
-              </div>
-              <div class="absolute bottom-0 left-0 z-10 w-full duration-300 opacity-0 bg-gradient-to-t from-black to-transparent group-hover:opacity-100"
-                style="height: 300px;"></div>
-            </a>
-          </div>
-        </div>
-        <div class="w-1/2 px-2 mb-4 sm:px-4 sm:mb-8 md:w-1/2 lg:w-1/4 lg:mb-0">
-          <div class="relative flex items-end !text-white h-64 sm:h-128 p-4 sm:p-6 mb-8 rounded-3xl overflow-hidden group duration-300 hover:shadow-2xl hover:scale-105 hover:shadow-pink-800/50" style="border: 3px solid rgb(126, 118, 118);">
-            <img  class="absolute top-0 left-0 object-cover w-full h-full"
-              src="./public/images/galeri/galeri_event_2.webp" alt="csf">
-            <a href="./public/images/galeri/galeri_event_2.webp" data-fancybox="galeri" data-caption="event 2">
-              <div class="relative">
-                <div class="relative z-50 max-w-lg duration-300 translate-y-5 opacity-0 group-hover:opacity-100 group-hover:translate-y-0">
-                  <h4 class="mb-3 text-xs font-medium text-white md:text-sm lg:text-lg">Event 2</h4>
-                </div>
-              </div>
-              <div class="absolute bottom-0 left-0 z-10 w-full duration-300 opacity-0 bg-gradient-to-t from-black to-transparent group-hover:opacity-100"
-                style="height: 300px;"></div>
-            </a>
-          </div>
-        </div>
-        <div class="w-1/2 px-2 mb-4 sm:px-4 sm:mb-8 md:w-1/2 lg:w-1/4 lg:mb-0">
-          <div class="relative flex items-end !text-white h-64 sm:h-128 p-4 sm:p-6 mb-8 rounded-3xl overflow-hidden group duration-300 hover:shadow-2xl hover:scale-105 hover:shadow-pink-800/50" style="border: 3px solid rgb(126, 118, 118);">
-            <img  class="absolute top-0 left-0 object-cover w-full h-full"
-              src="./public/images/galeri/galeri_event_3.webp" alt="csf">
-            <a href="./public/images/galeri/galeri_event_3.webp" data-fancybox="galeri" data-caption="event 3">
-              <div class="relative">
-                <div class="relative z-50 max-w-lg duration-300 translate-y-5 opacity-0 group-hover:opacity-100 group-hover:translate-y-0">
-                  <h4 class="mb-3 text-xs font-medium text-white md:text-sm lg:text-lg">Event 3</h4>
-                </div>
-              </div>
-              <div class="absolute bottom-0 left-0 z-10 w-full duration-300 opacity-0 bg-gradient-to-t from-black to-transparent group-hover:opacity-100"
-                style="height: 300px;"></div>
-            </a>
-          </div>
-        </div>
-        <div class="w-1/2 px-2 mb-4 sm:px-4 sm:mb-8 md:w-1/2 lg:w-1/4 lg:mb-0">
-          <div class="relative flex items-end !text-white h-64 sm:h-128 p-4 sm:p-6 mb-8 rounded-3xl overflow-hidden group duration-300 hover:shadow-2xl hover:scale-105 hover:shadow-pink-800/50" style="border: 3px solid rgb(126, 118, 118);">
-            <img  class="absolute top-0 left-0 object-cover w-full h-full"
-              src="./public/images/galeri/galeri_event_4.webp" alt="csf">
-            <a href="./public/images/galeri/galeri_event_4.webp" data-fancybox="galeri" data-caption="event 4">
-              <div class="relative">
-                <div class="relative z-50 max-w-lg duration-300 translate-y-5 opacity-0 group-hover:opacity-100 group-hover:translate-y-0">
-                  <h4 class="mb-3 text-xs font-medium text-white md:text-sm lg:text-lg">Event 4</h4>
-                </div>
-              </div>
-              <div class="absolute bottom-0 left-0 z-10 w-full duration-300 opacity-0 bg-gradient-to-t from-black to-transparent group-hover:opacity-100"
-                style="height: 300px;"></div>
-            </a>
-          </div>
-        </div>
+
         <div class="w-1/2 px-2 mb-4 sm:px-4 sm:mb-8 md:w-1/2 lg:w-1/4 lg:mb-0">
           <div class="relative flex items-end !text-white h-64 sm:h-128 p-4 sm:p-6 mb-8 rounded-3xl overflow-hidden group duration-300 hover:shadow-2xl hover:scale-105 hover:shadow-pink-800/50" style="border: 3px solid rgb(126, 118, 118);">
             <img  class="absolute top-0 left-0 object-cover w-full h-full"
@@ -953,36 +815,7 @@ margin: 0;
             </a>
           </div>
         </div>
-        <div class="w-1/2 px-2 mb-4 sm:px-4 sm:mb-8 md:w-1/2 lg:w-1/4 lg:mb-0">
-          <div class="relative flex items-end !text-white h-64 sm:h-128 p-4 sm:p-6 mb-8 rounded-3xl overflow-hidden group duration-300 hover:shadow-2xl hover:scale-105 hover:shadow-pink-800/50" style="border: 3px solid rgb(126, 118, 118);">
-            <img  class="absolute top-0 left-0 object-cover w-full h-full"
-              src="./public/images/galeri/galeri_guru_2024_8.webp" alt="csf">
-            <a href="./public/images/galeri/galeri_guru_2024_8.webp" data-fancybox="galeri" data-caption="Hari Guru 2024 8">
-              <div class="relative">
-                <div class="relative z-50 max-w-lg duration-300 translate-y-5 opacity-0 group-hover:opacity-100 group-hover:translate-y-0">
-                  <h4 class="mb-3 text-xs font-medium text-white md:text-sm lg:text-lg">Hari Guru 2024 8</h4>
-                </div>
-              </div>
-              <div class="absolute bottom-0 left-0 z-10 w-full duration-300 opacity-0 bg-gradient-to-t from-black to-transparent group-hover:opacity-100"
-                style="height: 300px;"></div>
-            </a>
-          </div>
-        </div>
-        <div class="w-1/2 px-2 mb-4 sm:px-4 sm:mb-8 md:w-1/2 lg:w-1/4 lg:mb-0">
-          <div class="relative flex items-end !text-white h-64 sm:h-128 p-4 sm:p-6 mb-8 rounded-3xl overflow-hidden group duration-300 hover:shadow-2xl hover:scale-105 hover:shadow-pink-800/50" style="border: 3px solid rgb(126, 118, 118);">
-            <img  class="absolute top-0 left-0 object-cover w-full h-full"
-              src="./public/images/galeri/galeri_guru_2024_9.webp" alt="csf">
-            <a href="./public/images/galeri/galeri_guru_2024_9.webp" data-fancybox="galeri" data-caption="Hari Guru 2024 9">
-              <div class="relative">
-                <div class="relative z-50 max-w-lg duration-300 translate-y-5 opacity-0 group-hover:opacity-100 group-hover:translate-y-0">
-                  <h4 class="mb-3 text-xs font-medium text-white md:text-sm lg:text-lg">Hari Guru 2024 9</h4>
-                </div>
-              </div>
-              <div class="absolute bottom-0 left-0 z-10 w-full duration-300 opacity-0 bg-gradient-to-t from-black to-transparent group-hover:opacity-100"
-                style="height: 300px;"></div>
-            </a>
-          </div>
-        </div>
+
 
 
 
@@ -997,9 +830,6 @@ margin: 0;
     
   </section>
 
-          
-
-
 
 <div class="relative flex flex-col " id="footer">
   
@@ -1008,7 +838,7 @@ margin: 0;
     <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
       <div class="max-w-3xl mx-auto">
         <a href="javascript:void(0)"  class="flex justify-center ">
-        <img loading="lazy"  src="./public/images/icon/pplg-white-full-icon.svg" loading="lazy" width="250px" alt="Logo PPLG FULL">
+        <img loading="lazy" src="./public/images/icon/pplg-white-full-icon.svg" loading="lazy" width="250px" alt="Logo PPLG FULL">
         </a>
         <ul class="flex flex-col items-center justify-center py-10 mb-10 text-lg transition-all duration-500 border-b border-gray-200 gap-7 md:flex-row md:gap-12">
           <li>
@@ -1063,9 +893,11 @@ margin: 0;
   </footer>
 </div>
 
+<script src="./public/js/main.js"></script>
+<script src="./public/js/aos.js"></script>
 <script src="./public/js/fancybox.js"></script>
-<script src="./public/js/bundle.min.js"></script>
-<script src="./public/js/swiperebudnel.js"></script>
+<script src="./public/js/main.js"></script>
+<script src="./public/js/alpine.js" defer></script>
 </body>
 </html>
 
