--- a/kelas12.html
+++ b/kelas12.html
@@ -219,7 +219,7 @@
             <div>
                 <h1 class="text-xs font-semibold text-blue-500  sm:text-sm md:text-2xl"data-aos-duration="1000" data-aos="fade-in">Pembelajaran</h1>
                 <p class="hidden mt-3 text-white text-xxs md:text-xs md:block"data-aos-duration="1000" data-aos="fade-in">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam atque saepe nisi quaerat ipsam rerum quod unde. Similique possimus soluta eaque, ullam assumenda mollitia tenetur 
+                    Magang dan Persiapan untuk UKK / LSP  
                 </p>
             </div>
         </div>
@@ -257,13 +257,17 @@
             <div class="flex flex-col mt-5 lg:flex-row gap-7">
                 <div class="w-full lg:w-7/12">
                     <p class="text-xs leading-normal text-justify text-white sm:text-sm lg:text-base"data-aos-duration="1000" data-aos="fade-right">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut asperiores fugit tenetur? Quaerat harum non perspiciatis nihil doloribus! Quia, quidem dolores incidunt sit quam natus laborum tempore eaque repellendus illum! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit reprehenderit nihil perferendis ut, voluptas inventore, commodi nisi error dolorum quos deserunt dignissimos animi expedita quibusdam esse voluptatum adipisci tempore molestias.
+                        Program Magang dirancang untuk membekali siswa dengan pengalaman praktis sekaligus mempersiapkan mereka menghadapi uji kompetensi. Melalui magang, kamu akan merasakan langsung bagaimana dunia kerja berjalan. Aktivitas ini memberikan kesempatan untuk mengasah keterampilan teknis, meningkatkan kemampuan komunikasi, serta belajar manajemen waktu yang efektif sesuai dengan kebutuhan industri.
+
+
                     </p>
                     <p class="mt-3 text-xs leading-normal text-justify text-white sm:text-sm lg:text-base"data-aos-duration="1000" data-aos="fade-right">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut asperiores fugit tenetur? Quaerat harum non perspiciatis nihil doloribus! Quia, quidem dolores incidunt sit quam natus laborum tempore eaque repellendus illum! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit reprehenderit nihil perferendis ut, voluptas inventore, commodi nisi error dolorum quos deserunt dignissimos animi expedita quibusdam esse voluptatum adipisci tempore molestias.
+                        Persiapan untuk UKK/LSP menjadi bagian penting dari proses ini. Kamu akan dilatih menyelesaikan simulasi tugas yang relevan dengan bidang keahlianmu, seperti mengembangkan proyek berbasis teknologi atau memecahkan masalah dengan pendekatan inovatif. Hal ini tidak hanya menguji kemampuan teknis, tetapi juga mengukur daya kreatifitas dan keahlian berpikir solutif.
+
+
                     </p>
                     <p class="mt-3 text-xs leading-normal text-justify text-white sm:text-sm lg:text-base"data-aos-duration="1000" data-aos="fade-right">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut asperiores fugit tenetur? Quaerat harum non perspiciatis nihil doloribus! Quia, quidem dolores incidunt sit quam natus laborum tempore eaque repellendus illum! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit reprehenderit nihil perferendis ut, voluptas inventore, commodi nisi error dolorum quos deserunt dignissimos animi expedita quibusdam esse voluptatum adipisci tempore molestias.
+                        Dengan mengikuti program ini, kamu akan mendapatkan wawasan yang lebih mendalam mengenai tantangan di dunia kerja sekaligus memperoleh sertifikasi resmi yang diakui. Persiapan matang ini akan membantu membangun kepercayaan dirimu, sehingga siap bersaing dalam dunia profesional maupun melanjutkan pendidikan ke tingkat yang lebih tinggi.
                     </p>
                 </div>
                 <div class="w-full lg:w-5/12 relative"data-aos-duration="1000" data-aos="fade-left">
