--- a/index.html
+++ b/index.html
@@ -186,85 +186,55 @@
   <body class="antialiased bg-body text-body font-body" loading="lazy " decoding="async" decoding="ansync" style="background-image: url(./public/images/background.gif);">
    
 
-  <section x-data="{ mobileNavOpen: false }"  
-  class="min-h-screen overflow-hidden bg-center bg-cover" 
-  style="background-image: url('./public/images/bg-rpl.webp');
-  background-size: cover;
-  background-position: center;
-  
-  padding: 0;
-  margin: 0;
-  ">
-  <div class="absolute inset-0 min-h-screen bg-black/70" style="height: 200vh; /* This sets the section to cover the full viewport height */"></div>
-  
-  <nav id="navbar" class="fixed z-40 flex items-center justify-between w-screen py-4 mx-auto transition-all duration-500 flex-nowrap shadow-dark-mild lg:flex-wrap lg:justify-start backdrop-blur-0" data-twe-navbar-ref>
-    <div class="flex flex-wrap items-center justify-between w-full px-8 mx-auto md:px-16">
+  <section x-data="{ mobileNavOpen: false }"  class="min-h-screen overflow-hidden bg-center bg-cover" style="background-image: url('./public/images/bg-rpl.webp'); background-size: cover; background-position: center; padding: 0; margin: 0; ">
+    <div class="absolute inset-0 min-h-screen bg-black/70" style="height: 200vh; /* This sets the section to cover the full viewport height */"></div>
+    <nav id="navbar" class="fixed z-40 flex items-center justify-between w-screen py-4 mx-auto transition-all duration-500 flex-nowrap shadow-dark-mild lg:flex-wrap lg:justify-start backdrop-blur-0" data-twe-navbar-ref>
+      <div class="flex flex-wrap items-center justify-between w-full px-8 mx-auto md:px-16">
         <div class="">
-            <a class="text-xl text-white transition-transform duration-300 ease-in rounded-10 hover:scale-125" href="javascript:void(0);">
-              <img class="transition-transform duration-300 ease-in rounded-10  hover:scale-125 " src="./public/images/icon/pplg-white-icon.svg" style="width: 100px;" alt="Logo PPLG"></a>
-        </div>
-    <button
-        class="relative z-40 block px-2 text-white bg-transparent border-0 hover:no-underline hover:shadow-none focus:no-underline focus:shadow-none focus:outline-none focus:ring-0 lg:hidden"
-        type="button"
-        data-twe-collapse-init
-        data-twe-target="#navbarSupportedContent14"
-        aria-controls="navbarSupportedContent14"
-        aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span
-        class="[&>svg]:w-7 [&>svg]:stroke-white dark:[&>svg]:stroke-neutral-200">
-        <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor">
-            <path
-            fill-rule="evenodd"
-            d="M3 6.75A.75.75 0 013.75 6h16.5a.75.75 0 010 1.5H3.75A.75.75 0 013 6.75zM3 12a.75.75 0 01.75-.75h16.5a.75.75 0 010 1.5H3.75A.75.75 0 013 12zm0 5.25a.75.75 0 01.75-.75h16.5a.75.75 0 010 1.5H3.75a.75.75 0 01-.75-.75z"
-            clip-rule="evenodd" />
-        </svg>
-        </span>
-    </button>
-  
-        <div
-            class="!visible mt-2 hidden flex-grow basis-[100%] items-center lg:mt-0 lg:!flex lg:basis-auto justify-center"
-            id="navbarSupportedContent14"
-            data-twe-collapse-item>
-            <ul class="flex flex-col justify-center lg:rounded-full lg:bg-white list-style-none lg:flex-row ms-auto lg:bg-opacity-10" data-twe-navbar-nav-ref>
-
-                <li class="py-2 ps-1" data-twe-nav-item-ref>
-                    <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform hover:text-gray-300 lg:rounded-full lg:hover:bg-white lg:hover:bg-opacity-20" 
-                    aria-current="page" href="#about"data-twe-nav-link-ref>About</a>
-                </li>
-                <li class="py-2 ps-1" data-twe-nav-item-ref>
-                    <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
-                    aria-current="page" href="#guru"data-twe-nav-link-ref>Guru</a>
-                </li>
-                <li class="py-2 ps-1" data-twe-nav-item-ref>
-                    <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
-                    aria-current="page" href="#fasilitas"data-twe-nav-link-ref>Fasilitas</a>
-                </li>
-                <li class="py-2 ps-1" data-twe-nav-item-ref>
-                    <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
-                    aria-current="page" href="#kelas"data-twe-nav-link-ref>Kelas</a>
-                </li>
-                <li class="py-2 ps-1" data-twe-nav-item-ref>
-                    <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
-                    aria-current="page" href="#website"data-twe-nav-link-ref>Website</a>
-                </li>
-                <li class="py-2 ps-1" data-twe-nav-item-ref>
-                  <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
-                  aria-current="page" href="#galeri"data-twe-nav-link-ref>Galeri</a>
-              </li>
-              </ul>
-  
-              
-              <!-- Dropdown -->
+          <a class="text-xl text-white transition-transform duration-300 ease-in rounded-10 hover:scale-125" href="javascript:void(0);">
+            <img class="transition-transform duration-300 ease-in rounded-10  hover:scale-125 " src="./public/images/icon/pplg-white-icon.svg" style="width: 100px;" alt="Logo PPLG"></a>
+          </div>
+          <button class="relative z-40 block px-2 text-white bg-transparent border-0 hover:no-underline hover:shadow-none focus:no-underline focus:shadow-none focus:outline-none focus:ring-0 lg:hidden" type="button" data-twe-collapse-init data-twe-target="#navbarSupportedContent14" aria-controls="navbarSupportedContent14" aria-expanded="false" aria-label="Toggle navigation">
+            <span
+              class="[&>svg]:w-7 [&>svg]:stroke-white dark:[&>svg]:stroke-neutral-200">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"> 
+                <path fill-rule="evenodd" d="M3 6.75A.75.75 0 013.75 6h16.5a.75.75 0 010 1.5H3.75A.75.75 0 013 6.75zM3 12a.75.75 0 01.75-.75h16.5a.75.75 0 010 1.5H3.75A.75.75 0 013 12zm0 5.25a.75.75 0 01.75-.75h16.5a.75.75 0 010 1.5H3.75a.75.75 0 01-.75-.75z" clip-rule="evenodd" />
+              </svg>
+            </span>
+          </button>
+        <div class="!visible mt-2 hidden flex-grow basis-[100%] items-center lg:mt-0 lg:!flex lg:basis-auto justify-center" id="navbarSupportedContent14" data-twe-collapse-item>
+          <ul class="flex flex-col justify-center lg:rounded-full lg:bg-white list-style-none lg:flex-row ms-auto lg:bg-opacity-10" data-twe-navbar-nav-ref>
+          <li class="py-2 ps-1" data-twe-nav-item-ref>
+                <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform hover:text-gray-300 lg:rounded-full lg:hover:bg-white lg:hover:bg-opacity-20" 
+                aria-current="page" href="#about"data-twe-nav-link-ref>About</a>
+          </li>
+          <li class="py-2 ps-1" data-twe-nav-item-ref>
+                <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
+                aria-current="page" href="#guru"data-twe-nav-link-ref>Guru</a>
+          </li>
+          <li class="py-2 ps-1" data-twe-nav-item-ref>
+                <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
+                aria-current="page" href="#fasilitas"data-twe-nav-link-ref>Fasilitas</a>
+          </li>
+          <li class="py-2 ps-1" data-twe-nav-item-ref>
+                <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
+                aria-current="page" href="#kelas"data-twe-nav-link-ref>Kelas</a>
+          </li>
+          <li class="py-2 ps-1" data-twe-nav-item-ref>
+                <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
+                aria-current="page" href="#website"data-twe-nav-link-ref>Website</a>
+          </li>
+          <li class="py-2 ps-1" data-twe-nav-item-ref>
+              <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
+              aria-current="page" href="#galeri"data-twe-nav-link-ref>Galeri</a>
+            </li>
+          </ul>
           <div class=" ms-auto" data-twe-dropdown-ref>
             <button class=" block py-3.5 uppercase text-xs tracking-px text-white font-bold bg-white bg-opacity-20 hover:bg-opacity-10  ease-in rounded-10 transition-transform duration-300 hover:scale-125 px-2">smk negeri 2</button>
           </div>
         </div>
-    </div>
-  </nav>
+      </div>
+    </nav>
     
     <div class="relative container mx-auto px-4 !min-h-screen   pb-20">
       <div class="relative flex flex-col items-center justify-center min-h-screen -m-6 xl:flex-row lg:pt-32 pb-36 ">
