--- a/galeri.html
+++ b/galeri.html
@@ -893,11 +893,15 @@ margin: 0;
   </footer>
 </div>
 
-<script src="./public/js/main.js"></script>
+<script src="./public/js/alpine.js"></script>
 <script src="./public/js/aos.js"></script>
-<script src="./public/js/fancybox.js"></script>
-<script src="./public/js/main.js"></script>
-<script src="./public/js/alpine.js" defer></script>
+<script src="./public/js/bundle.min.js"></script>  
+<script src="./public/js/fancybox.js"></script>  
+<script src="./public/js/galeri.js"></script>  
+<script src="./public/js/main.js"></script>  
+<script src="./public/js/swiper.js"></script>
+<script src="./public/js/swiperebudnel.js"></script>
+<script src="./public/js/tw-ele.js"></script>
 </body>
 </html>
 
