--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
         </div>
       </div>
     </div>
+ 
   </section>
   
   
@@ -1305,10 +1306,15 @@
     backToTopBtn.addEventListener("click", backToTop);
   </script>
 
-  <script src="./public/js/bundle.min.js"></script>
+  <script src="./public/js/alpine.js"></script>
+  <script src="./public/js/aos.js"></script>
+  <script src="./public/js/bundle.min.js"></script>  
+  <script src="./public/js/fancybox.js"></script>  
+  <script src="./public/js/galeri.js"></script>  
+  <script src="./public/js/main.js"></script>  
+  <script src="./public/js/swiper.js"></script>
   <script src="./public/js/swiperebudnel.js"></script>
-  
-  <script src="./public/js/fancybox.js"></script>
+  <script src="./public/js/tw-ele.js"></script>
 </body>
 </html>
 
