--- a/index.html
+++ b/index.html
@@ -927,8 +927,8 @@
           <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/website/website4.webp" alt="Website Kelas RPL" width="100%" height="100%">
         </swiper-slide>
         <swiper-slide class ="!-mr-2 lg:!mr-[30px]">
-          <p class="absolute bottom-0 left-0 z-40 ml-2 text-xs tracking-widest text-left text-white uppercase lg:top-0 font-bebas md:ml-7 lg:mt-7 mb-7 sm:text-xl lg:text-4xl lg:mb-2">McLaren - Faiz Naufal </p>
-            <a href="https://paisnaufl.github.io/McLaren-Web-/" target="_blank"> 
+          <p class="absolute bottom-0 left-0 z-40 ml-2 text-xs tracking-widest text-left text-white uppercase lg:top-0 font-bebas md:ml-7 lg:mt-7 mb-7 sm:text-xl lg:text-4xl lg:mb-2">New Jeans - Faiz Naufal </p>
+            <a href="https://paisnaufl.github.io/NJWEB/" target="_blank"> 
             <svg 
               xmlns="http://www.w3.org/2000/svg" 
               class="absolute top-0 right-0 z-40 w-6 h-6 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7" 
